Se cambia el titulo como prueba

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header class="beaner">
-		<h1 class="beaner-title">Invert Your World</h1>
+		<h1 class="beaner-title">Inventa tu mundo</h1>
 	</header>
 	<nav class="nav-header">
 		<input type="checkbox" id="check-menu" autocomplete="off" value="value">
