Se inicia ajuste de texto para movil, agregando tamaños de titulos y padding para el body

--- a/como-gane-un-premio-de-300000-pesos.html
+++ b/como-gane-un-premio-de-300000-pesos.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>Que harias si ganaras 300,000 pesos</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="fonts/style.css">
 	<link rel="shortcut icon"  href="img/ico-logo.png">
 <body>
 	<nav class="nav-header">
@@ -40,21 +41,21 @@
 	</nav>
 	<article>
 		<header>
-			<img src="" alt="Banner">
+			<img src="img/Ganadores Sorteo UABC.jpg" alt="Banner" class="banner">
 		</header>
 		<div>
-			<p>ETIQUETA</p>
-			<div>
-				<i>icono</i>
-				<p>fecha</p>
+			<p>ANECDOTA</p>
+			<div class="block">
+				<span class="icon-calendar">access_item</span>
+				<p>10/Junio/2020</p>
 			</div>
-			<div>
-				<i>icono</i>
-				<p>Tiempo de lectura</p>
+			<div class="block">
+				<span class="icon-clock">icono</span>
+				<p>4 min. lectura</p>
 			</div>
-			<div>
-				<i>icono</i>
-				<p>Autor</p>
+			<div class="block">
+				<span class="icon-user">icono</span>
+				<p>Gilberto A. G.</p>
 			</div>
 		</div>
 		<h1>Como gane un premio de $300,000 pesos</h1>
