se realiza el estilo del blog en gran parte por tarte del texto, borde del articulo, centrado de pagina y colores de fondo. Ademas se restructura texto del html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Equipo de trabajo de IYW nuestro lema es innovar o aprender a mejorar nuestra calidad de trabajo">
 	<meta name="robot" content="index,follow">
-	<title>Invent Your World</title>
+	<title>Inventa Tu Mundo</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="shortcut icon"  href="img/ico-logo.png">
 </head>
