Se termina de alinear todo el texto del articulo para dispositivos moviles

--- a/blogs/como-gane-un-premio-de-300000-pesos.html
+++ b/blogs/como-gane-un-premio-de-300000-pesos.html
@@ -44,19 +44,10 @@
 			<img src="../img/Ganadores Sorteo UABC.jpg" alt="Banner" class="banner">
 		</header>
 		<div>
-			<p>REFLEXION</p>
-			<div class="block">
-				<span class="icon-calendar">access_item</span>
-				<p>10/Junio/2020</p>
-			</div>
-			<div class="block">
-				<span class="icon-clock">icono</span>
-				<p>4 min. lectura</p>
-			</div>
-			<div class="block">
-				<span class="icon-user">icono</span>
-				<p>Gilberto A. G.</p>
-			</div>
+			<a class="block-2 etiqueta">REFLEXION</a>
+			<p class="block-2"><span class="icon-calendar"></span>10/Junio/2020</p>
+			<p class="block-2"><span class="icon-clock"></span>4 min. lectura</p>
+			<p class="block-2"><span class="icon-user"></span>Gilberto A.</p>	
 		</div>
 		<h1>Como gane un premio de $300,000 pesos</h1>
 			<h2>Crees estar preparado para ganarte un gran premio? <b>creeme que No.</b></h2> 
@@ -84,9 +75,9 @@
 
 			<h3>PREMIOS</h3>
 				<ul>
-					<li>1er lugar $300,000 pesos</li>
-					<li>2do lugar $150,000 pesos</li>
-					<li>3er lugar $75,000 pesos</li>
+					<li class="no-decoracion">1er lugar $300,000 pesos</li>
+					<li class="no-decoracion">2do lugar $150,000 pesos</li>
+					<li class="no-decoracion">3er lugar $75,000 pesos</li>
 				</ul> 
 			<p>Entonces algo no cuadro con lo que escuche en la llamada, ya que en llamada dijo 3,000 y boleto decia 300,000. 
 				Pero busque la direccion y mire que era en la universidad asi que me anime en acudir hora y fecha acordada.
