--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 	<title>Inventa Tu Mundo</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="shortcut icon"  href="img/ico-logo.png">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4T44TXREG"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-Y4T44TXREG');
+	</script>
 </head>
 <body>
 	<header class="beaner">
