--- a/blogs/como-gane-un-premio-de-300000-pesos.html
+++ b/blogs/como-gane-un-premio-de-300000-pesos.html
@@ -10,33 +10,18 @@
 	<link rel="stylesheet" href="../fonts/style.css">
 	<link rel="shortcut icon"  href="../img/ico-logo.png">
 <body>
-	<nav class="nav-header">
-		<input type="checkbox" id="check-menu" autocomplete="off" value="value">
-		<label for="check-menu" class="button-menu"><img  src="../img/menu.png" alt="imagen boton navegacion movil"></label>
-		<ul class="menu">
-			<li>
-				<a href="../index.html">
-					<img class="logo-h" src="../img/logo-h.png" alt="logotipo de IYW">
-				</a>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="">Areas</a>
-				<ul class="menu submenu">
-					<li class="menu-item"><a class="menu-link" href="../electronica.html">Electronica</a></li>
-					<li class="menu-item"><a class="menu-link" href="../informatica.html">Sistemas</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Mecatronica</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Diseño</a></li>
-				</ul>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="#">Contacto</a>
-				<ul class="menu submenu">
-					<li class="menu-item"><a class="menu-link" href="../cv.gilberto.alvarez.gamboa.html" target="_blank">Gilberto Alvarez G.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Fernanda Isabel Contreras F.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Christopher Gutierrez E.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Abigail Sariah Diaz A.</a></li>
-				</ul>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="nosotros.html">Nosotros</a></li>
-			<li class="menu-item"><a class="menu-link" href="#">Blog</a></li>
+	<nav id="navegacion">
+		<a id="logo" href="../index.html"><img src="../img/logo-horizontal.png" /></a>
+		<div class="boton-menu">
+			<a href="#navegacion" class="open"><span class="icon-home"></span></a>
+			<a href="#" class="close"><span class="icon-home"></span></a>
+		</div>
+		<ul class="nav-items">
+			<li id="item1"><a href="/blogs/como-gane-un-premio-de-300000-pesos.html"> <span>Blogs</span></a></li>
+			<li id="item2"><a href="#"><span>Contacto</span></a></li>
+			<li id="item3"><a href="#"><span>...</span></a></li>
+			<li id="item4"><a href="#"><span>...</span></a></li>
+			<li id="item5"><a href="#"><span>...</span></a></li>
 		</ul>
 	</nav>
 	<article>
@@ -47,7 +32,7 @@
 			<a class="block-2 etiqueta">REFLEXION</a>
 			<p class="block-2"><span class="icon-calendar"></span>10/Junio/2020</p>
 			<p class="block-2"><span class="icon-clock"></span>4 min. lectura</p>
-			<p class="block-2"><span class="icon-user"></span>Gilberto A.</p>	
+			<p class="block-2"><span class="icon-user"></span>Gilberto A. G.</p>	
 		</div>
 		<h1>Como gane un premio de $300,000 pesos</h1>
 			<h2>Crees estar preparado para ganarte un gran premio? <b>creeme que No.</b></h2> 
@@ -177,7 +162,7 @@
 		</section>
 	</aside>-->
 	<footer class="container-footer">
-		<p>&copy; 2018. Todos los derechos reservados.</p>
+		<p>&copy; 2020. Todos los derechos reservados.</p>
 		<div class="nav-footer">
 			<h5>Explorar</h5>
 			<ul class="list">
