--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 	<meta name="robot" content="index,follow">
 	<title>Inventa Tu Mundo</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="fonts/style.css">
 	<link rel="shortcut icon"  href="img/ico-logo.png">
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4T44TXREG"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
-
 	gtag('config', 'G-Y4T44TXREG');
 	</script>
 </head>
@@ -22,36 +23,21 @@
 	<header class="beaner">
 		<h1 class="beaner-title">Inventa tu mundo</h1>
 	</header>
-	<nav class="nav-header">
-		<input type="checkbox" id="check-menu" autocomplete="off" value="value">
-		<label for="check-menu" class="button-menu"><img  src="img/menu.png" alt="imagen boton navegacion movil"></label>
-		<ul class="menu">
-			<li>
-				<a href="index.html">
-					<img class="logo-h" src="img/logo-h.png" alt="logotipo de IYW">
-				</a>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="">Areas</a>
-				<ul class="menu submenu">
-					<li class="menu-item"><a class="menu-link" href="electronica.html">Electronica</a></li>
-					<li class="menu-item"><a class="menu-link" href="informatica.html">Sistemas</a></li>
-					<li class="menu-item"><a class="menu-link" href="mecatronic.html">Mecatronica</a></li>
-					<li class="menu-item"><a class="menu-link" href="desing.html">Diseño</a></li>
-				</ul>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="#">Contacto</a>
-				<ul class="menu submenu">
-					<li class="menu-item"><a class="menu-link" href="cv.gilberto.alvarez.gamboa.html" target="_blank">Gilberto Alvarez G.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Fernanda Isabel Contreras F.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Christopher Gutierrez E.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Abigail Sariah Diaz A.</a></li>
-				</ul>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="nosotros.html">Nosotros</a></li>
-			<li class="menu-item"><a class="menu-link" href="#">Blog</a></li>
+	<nav id="navegacion">
+		<a id="logo" href="index.html"><img src="img/logo-horizontal.png" /></a>
+		<div class="boton-menu">
+			<a href="#navegacion" class="open"><span class="icon-home"></span></a>
+			<a href="#" class="close"><span class="icon-home"></span></a>
+		</div>
+		<ul class="nav-items">
+			<li id="item1"><a href="/blogs/como-gane-un-premio-de-300000-pesos.html"> <span>Blogs</span></a></li>
+			<li id="item2"><a href="#"><span>Contacto</span></a></li>
+			<li id="item3"><a href="#"><span>...</span></a></li>
+			<li id="item4"><a href="#"><span>...</span></a></li>
+			<li id="item5"><a href="#"><span>...</span></a></li>
 		</ul>
 	</nav>
-	<section>
+	<section class="productos-y-servicios">
 		<p class="subtitle">Laboratorio de tecnologia y creaciones de ideas de innovacion</p>
 		<button class="block block-4">
 			<a href="informatica.html">
@@ -131,7 +117,6 @@
 			<p>Desarrollo de programacion de software, con utilidad de facilidad de manejar sus datos y mostrarlos.</p>
 		</article>
 	</section>
-
 	<footer class="container-footer">
 		<p>&copy; 2018. Todos los derechos reservados.</p>
 		<div class="nav-footer">
