Se termina area responsiba de todo pagina index

--- a/blogs/como-gane-un-premio-de-300000-pesos.html
+++ b/blogs/como-gane-un-premio-de-300000-pesos.html
@@ -2,19 +2,20 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Area de Electronica. trabajos de reparacion, diseño PCB y optimizacion de hardware.">
+	<meta name="description" content="Historia que tambien te pasaria si ganaras un premio de un sorteo">
 	<meta name="robot" content="index,follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>Que harias si ganaras 300,000 pesos</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="stylesheet" href="../fonts/style.css">
 	<link rel="shortcut icon"  href="../img/ico-logo.png">
+</head>
 <body>
 	<nav id="navegacion">
-		<a id="logo" href="../index.html"><img src="../img/logo-horizontal.png" /></a>
+		<a id="logo" href="index.html"><img src="../img/logo-horizontal.png" /></a>
 		<div class="boton-menu">
-			<a href="#navegacion" class="open"><span class="icon-home"></span></a>
-			<a href="#" class="close"><span class="icon-home"></span></a>
+			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
+			<a href="#" class="close"><span class="icon-menu"></span></a>
 		</div>
 		<ul class="nav-items">
 			<li id="item1"><a href="/blogs/como-gane-un-premio-de-300000-pesos.html"> <span>Blogs</span></a></li>
