--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	<nav id="navegacion">
 		<a id="logo" href="index.html"><img src="img/logo-horizontal.png" /></a>
 		<div class="boton-menu">
-			<a href="#navegacion" class="open"><span class="icon-home"></span></a>
-			<a href="#" class="close"><span class="icon-home"></span></a>
+			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
+			<a href="#" class="close"><span class="icon-menu"></span></a>
 		</div>
 		<ul class="nav-items">
 			<li id="item1"><a href="/blogs/como-gane-un-premio-de-300000-pesos.html"> <span>Blogs</span></a></li>
@@ -37,87 +37,105 @@
 			<li id="item5"><a href="#"><span>...</span></a></li>
 		</ul>
 	</nav>
+
 	<section class="productos-y-servicios">
-		<p class="subtitle">Laboratorio de tecnologia y creaciones de ideas de innovacion</p>
-		<button class="block block-4">
-			<a href="informatica.html">
-				<figure>
-					<img class="image-block-medium" src="img/pc.png" alt="imagen de un monitor">
-				</figure>
-				<h2>Informatica</h2>
-			</a>
-		</button>
-			
-		<button class="block block-4">
-			<a href="electronica.html">
-				<figure>
-					<img class="image-block-medium" src="img/chip.png" alt="imagen de un chip">
-				</figure>
-				<h2>Electronica</h2>
-			</a>
-		</button>
-		
-		<button class="block block-4">
-			<a href="desing.html">
-				<figure>
-					<img class="image-block-medium" src="img/dibujo.png" alt="imagen de una tableta de dibujo">
-				</figure>
-				<h2>Diseño</h2>
-			</a>
-		</button>
-		
-		<button class="block block-4">
-			<a href="mecatronic.html">
-				<figure>
-					<img class="image-block-medium" src="img/robot-2.png" alt="imagen de dos brazos roboticos">
-				</figure>
-				<h2>Mecatronica</h2>
-			</a>	
-		</button>	
+		<h2>Productos y Servicios</h2>
+		<div class="contenido">		
+			<button class="block">
+				<a href="informatica.html">
+					<figure>
+						<img class="image-block-medium" src="img/pc.png" alt="imagen de un monitor">
+					</figure>
+					<h3>INFORMATICA</h3>
+				</a>
+			</button>
+			<button class="block">
+				<a href="electronica.html">
+					<figure>
+						<img class="image-block-medium" src="img/chip.png" alt="imagen de un chip">
+					</figure>
+					<h3>ELECTRONICA</h3>
+				</a>
+			</button>
+			<button class="block">
+				<a href="desing.html">
+					<figure>
+						<img class="image-block-medium" src="img/dibujo.png" alt="imagen de una tableta de dibujo">
+					</figure>
+					<h3>DISEÑO</h3>
+				</a>
+			</button>
+			<button class="block">
+				<a href="mecatronic.html">
+					<figure>
+						<img class="image-block-medium" src="img/robot-2.png" alt="imagen de dos brazos roboticos">
+					</figure>
+					<h3>MECATRONICA</h3>
+				</a>	
+			</button>
+		</div>	
 	</section>
-	<section>
-		<article class="block block-8">
-			<figure><img src="img/impresion3D.png" alt="imagen impresion 3D"></figure>
-			<h3>Impresion 3D</h3>
-			<p>Fabricacion de piezas 3d modelo de plastico y a color de su gusto</p>
-		</article>
-		<article class="block block-8">
-			<figure><img src="img/paginaweb.png" alt="imagen diseño de pagina web"></figure>
-			<h3>Desarrollo web</h3>
-			<p>Diseño y desarrollo de contenido web con adaptacion a moviles y posicion en buscadores.</p>
-		</article>
-		<article class="block block-8">
-			<figure><img src="img/espadas.png" alt="imagen de espadas"></figure>
-			<h3>Videojuegos</h3>
-			<p>Programacion y desarrollo de videojuegos a todas areas abascadas.</p>
-		</article>
-		<article class="block block-8">
-			<figure><img src="img/placa-madre.png" alt="imagen placa electronica"></figure>
-			<h3>Desarrollo PCB</h3>
-			<p>Diseño y estructura PCB's de la electronica de alta calidad.</p>
-		</article>
-		<article class="block block-8">
-			<figure><img src="img/mecanica.png" alt="imagen de diseño de pieza mecanica"></figure>
-			<h3>Diseño Mecanico</h3>
-			<p>Construccion de maquinaria funcional con funcionalidad espesifica.</p>
-		</article>
-		<article class="block block-8">
-			<figure><img src="img/robot.png" alt="imagen de un brazo robotico"></figure>
-			<h3>Robotica</h3>
-			<p>Gestion de pequeños robots para automatizacion e elaboracion de alguna tarea.</p>
-		</article>
-		<article class="block block-8">
-			<figure><img src="img/celular.png" alt="imagen de un celular"></figure>
-			<h3>Reparacion</h3>
-			<p>Reparacion equipos electronicos como: TV, Moviles, PC, etc.</p>
-		</article>
-		<article class="block block-8">
-			<figure><img src="img/software.png" alt="imagen de programa de informatica"></figure>
-			<h3>Software</h3>
-			<p>Desarrollo de programacion de software, con utilidad de facilidad de manejar sus datos y mostrarlos.</p>
-		</article>
+
+	<section class="propuesta-de-valor">
+
 	</section>
+
+	<section class="contenido-de-interes">
+		<h2>Contenido de interes</h2>
+		<div class="contenido">
+			<article class="block">
+				<figure><img src="img/impresion3D.png" alt="imagen impresion 3D"></figure>
+				<h3>Me gane 1er premio en un sorte</h3>
+				<p>Fabricacion de piezas 3d modelo de plastico y a color de su gusto</p>
+				<button><a href="#">Leer mas</a></button>
+			</article>
+			<article class="block">
+				<figure><img src="img/paginaweb.png" alt="imagen diseño de pagina web"></figure>
+				<h3>Desarrollo web</h3>
+				<p>Diseño y desarrollo de contenido web con adaptacion a moviles y posicion en buscadores.</p>
+				<button><a href="#">Leer mas</a></button>
+			</article>
+			<article class="block">
+				<figure><img src="img/espadas.png" alt="imagen de espadas"></figure>
+				<h3>Videojuegos</h3>
+				<p>Programacion y desarrollo de videojuegos a todas areas abascadas.</p>
+				<button><a href="#">Leer mas</a></button>
+			</article>
+			<article class="block">
+				<figure><img src="img/placa-madre.png" alt="imagen placa electronica"></figure>
+				<h3>Desarrollo PCB</h3>
+				<p>Diseño y estructura PCB's de la electronica de alta calidad.</p>
+				<button><a href="#">Leer mas</a></button>
+			</article>
+			<article class="block">
+				<figure><img src="img/mecanica.png" alt="imagen de diseño de pieza mecanica"></figure>
+				<h3>Diseño Mecanico</h3>
+				<p>Construccion de maquinaria funcional con funcionalidad espesifica.</p>
+				<button><a href="#">Leer mas</a></button>
+			</article>
+			<article class="block">
+				<figure><img src="img/robot.png" alt="imagen de un brazo robotico"></figure>
+				<h3>Robotica</h3>
+				<p>Gestion de pequeños robots para automatizacion e elaboracion de alguna tarea.</p>
+				<button><a href="#">Leer mas</a></button>
+			</article>
+			<article class="block">
+				<figure><img src="img/celular.png" alt="imagen de un celular"></figure>
+				<h3>Reparacion</h3>
+				<p>Reparacion equipos electronicos como: TV, Moviles, PC, etc.</p>
+				<button><a href="#">Leer mas</a></button>
+			</article>
+			<article class="block">
+				<figure><img src="img/software.png" alt="imagen de programa de informatica"></figure>
+				<h3>Software</h3>
+				<p>Desarrollo de programacion de software, con utilidad de facilidad de manejar sus datos y mostrarlos.</p>
+				<button><a href="#">Leer mas</a></button>
+			</article>
+		</div>
+	</section>
+
 	<footer class="container-footer">
+		<h2>Datos de contacto</h2>
 		<p>&copy; 2018. Todos los derechos reservados.</p>
 		<div class="nav-footer">
 			<h4>Explorar</h4>
@@ -133,6 +151,12 @@
 				<li><a class="menu-link" href="privacidad.html">Privacidad</a></li>
 			</ul>
 		</div>
+		<form action="#">
+			<h3>ENVIANOS UN CORREO</h3>
+			<input type="email" name="email" placeholder="Tu correo aqui">
+			<button name="enviar"></button>
+		</form>
+
 		<div class="nav-social-networks">
 			<h4>Seguir</h4>
 			<ul>
@@ -141,8 +165,6 @@
 				<li><a href="#" target="_blank"><img src="img/email.png" alt="imagen de un correo"></a>
 				</li>
 				<li><a href="#" target="_blank"><img src="img/twitter.png" alt="imagen logo de twitter"></a>
-				</li>
-				<li><a href="#" target="_blank"><img src="img/google-plus.png" alt="imagen logo de google plus"></a>
 				</li>
 			</ul>	
 		</div>
