Se optimiza primer blog para ser responcibe

--- a/blogs/como-gane-un-premio-de-300000-pesos.html
+++ b/blogs/como-gane-un-premio-de-300000-pesos.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<nav id="navegacion">
-		<a id="logo" href="index.html"><img src="../img/logo-horizontal.png" /></a>
+		<a id="logo" href="../index.html"><img loading="lazy" src="../img/logo-horizontal.png" /></a>
 		<div class="boton-menu">
 			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
 			<a href="#" class="close"><span class="icon-menu"></span></a>
@@ -27,13 +27,13 @@
 	</nav>
 	<article>
 		<header>
-			<img src="../img/Ganadores Sorteo UABC.jpg" alt="Banner" class="banner">
+			<img loading="lazy" src="../img/Ganadores Sorteo UABC.jpg" alt="Banner" class="beaner-articulo">
 		</header>
-		<div>
-			<a class="block-2 etiqueta">REFLEXION</a>
-			<p class="block-2"><span class="icon-calendar"></span>10/Junio/2020</p>
-			<p class="block-2"><span class="icon-clock"></span>4 min. lectura</p>
-			<p class="block-2"><span class="icon-user"></span>Gilberto A. G.</p>	
+		<div class="contenido">
+			<a class="block etiqueta">REFLEXION</a>
+			<p class="block"><span class="icon-calendar"></span>10/Junio/2020</p>
+			<p class="block"><span class="icon-clock"></span>4 min. lectura</p>
+			<p class="block"><span class="icon-user"></span>Gilberto Alvarez. G.</p>	
 		</div>
 		<h1>Como gane un premio de $300,000 pesos</h1>
 			<h2>Crees estar preparado para ganarte un gran premio? <b>creeme que No.</b></h2> 
@@ -113,7 +113,7 @@
 				<b>no prierdas esa oportunida</b> resarrolla tu propio camion y ten claro que hacer en ese momento.</p>
 
 			<section>
-				<img src="" alt="">
+				<img loading="lazy" src="" alt="">
 				<h3>Gilberto A. G.</h3>
 				<p>Ingeniero de servicio</p>
 				<p>Gilberto es un apacionado en desarrollo web, diseño 3D y robotica. Enfocado en gestion de proyectos
@@ -181,10 +181,10 @@
 		<div class="nav-social-networks">
 			<h5>Seguir</h5>
 			<ul>
-				<li><a href="https://www.facebook.com/InventYourWorld/"><img src="../img/facebook.png" 
+				<li><a href="https://www.facebook.com/InventYourWorld/"><img loading="lazy" src="../img/facebook.png" 
 					alt="imagen logo de facebook"></a></li>
-				<li><a href="#"><img src="../img/email.png" alt="imagen de un correo"></a></li>
-				<li><a href="#"><img src="../img/twitter.png" alt="imagen logo de twitter"></a></li>
+				<li><a href="#"><img loading="lazy" src="../img/email.png" alt="imagen de un correo"></a></li>
+				<li><a href="#"><img loading="lazy" src="../img/twitter.png" alt="imagen logo de twitter"></a></li>
 			</ul>	
 		</div>
 	</footer>
