--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<h1 class="beaner-title">Inventa tu mundo</h1>
 	</header>
 	<nav id="navegacion">
-		<a id="logo" href="index.html"><img src="img/logo-horizontal.png" /></a>
+		<a id="logo" href="index.html"><img loading="lazy" src="img/logo-horizontal.png" /></a>
 		<div class="boton-menu">
 			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
 			<a href="#" class="close"><span class="icon-menu"></span></a>
@@ -44,7 +44,7 @@
 			<button class="block">
 				<a href="informatica.html">
 					<figure>
-						<img class="image-block-medium" src="img/pc.png" alt="imagen de un monitor">
+						<img loading="lazy" class="image-block-medium" src="img/pc.png" alt="imagen de un monitor">
 					</figure>
 					<h3>INFORMATICA</h3>
 				</a>
@@ -52,7 +52,7 @@
 			<button class="block">
 				<a href="electronica.html">
 					<figure>
-						<img class="image-block-medium" src="img/chip.png" alt="imagen de un chip">
+						<img loading="lazy" class="image-block-medium" src="img/chip.png" alt="imagen de un chip">
 					</figure>
 					<h3>ELECTRONICA</h3>
 				</a>
@@ -60,7 +60,7 @@
 			<button class="block">
 				<a href="desing.html">
 					<figure>
-						<img class="image-block-medium" src="img/dibujo.png" alt="imagen de una tableta de dibujo">
+						<img loading="lazy" class="image-block-medium" src="img/dibujo.png" alt="imagen de una tableta de dibujo">
 					</figure>
 					<h3>DISEÑO</h3>
 				</a>
@@ -68,7 +68,7 @@
 			<button class="block">
 				<a href="mecatronic.html">
 					<figure>
-						<img class="image-block-medium" src="img/robot-2.png" alt="imagen de dos brazos roboticos">
+						<img loading="lazy" class="image-block-medium" src="img/robot-2.png" alt="imagen de dos brazos roboticos">
 					</figure>
 					<h3>MECATRONICA</h3>
 				</a>	
@@ -84,52 +84,12 @@
 		<h2>Contenido de interes</h2>
 		<div class="contenido">
 			<article class="block">
-				<figure><img src="img/impresion3D.png" alt="imagen impresion 3D"></figure>
+				<figure><img loading="lazy" src="img/impresion3D.png" alt="imagen impresion 3D"></figure>
 				<h3>Me gane 1er premio en un sorte</h3>
-				<p>Fabricacion de piezas 3d modelo de plastico y a color de su gusto</p>
-				<button><a href="#">Leer mas</a></button>
-			</article>
-			<article class="block">
-				<figure><img src="img/paginaweb.png" alt="imagen diseño de pagina web"></figure>
-				<h3>Desarrollo web</h3>
-				<p>Diseño y desarrollo de contenido web con adaptacion a moviles y posicion en buscadores.</p>
-				<button><a href="#">Leer mas</a></button>
-			</article>
-			<article class="block">
-				<figure><img src="img/espadas.png" alt="imagen de espadas"></figure>
-				<h3>Videojuegos</h3>
-				<p>Programacion y desarrollo de videojuegos a todas areas abascadas.</p>
-				<button><a href="#">Leer mas</a></button>
-			</article>
-			<article class="block">
-				<figure><img src="img/placa-madre.png" alt="imagen placa electronica"></figure>
-				<h3>Desarrollo PCB</h3>
-				<p>Diseño y estructura PCB's de la electronica de alta calidad.</p>
-				<button><a href="#">Leer mas</a></button>
-			</article>
-			<article class="block">
-				<figure><img src="img/mecanica.png" alt="imagen de diseño de pieza mecanica"></figure>
-				<h3>Diseño Mecanico</h3>
-				<p>Construccion de maquinaria funcional con funcionalidad espesifica.</p>
-				<button><a href="#">Leer mas</a></button>
-			</article>
-			<article class="block">
-				<figure><img src="img/robot.png" alt="imagen de un brazo robotico"></figure>
-				<h3>Robotica</h3>
-				<p>Gestion de pequeños robots para automatizacion e elaboracion de alguna tarea.</p>
-				<button><a href="#">Leer mas</a></button>
-			</article>
-			<article class="block">
-				<figure><img src="img/celular.png" alt="imagen de un celular"></figure>
-				<h3>Reparacion</h3>
-				<p>Reparacion equipos electronicos como: TV, Moviles, PC, etc.</p>
-				<button><a href="#">Leer mas</a></button>
-			</article>
-			<article class="block">
-				<figure><img src="img/software.png" alt="imagen de programa de informatica"></figure>
-				<h3>Software</h3>
-				<p>Desarrollo de programacion de software, con utilidad de facilidad de manejar sus datos y mostrarlos.</p>
-				<button><a href="#">Leer mas</a></button>
+				<p>Siempre se cree estar listo para cuando llegue la oportunidades y creeme que no lo estas,
+					aqui le va mi historia que me cambio la vida...
+				</p>
+				<button><a href="/blogs/como-gane-un-premio-de-300000-pesos.html">Leer mas</a></button>
 			</article>
 		</div>
 	</section>
@@ -160,11 +120,11 @@
 		<div class="nav-social-networks">
 			<h4>Seguir</h4>
 			<ul>
-				<li><a href="https://www.facebook.com/InventYourWorld/" target="_blank"><img src="img/facebook.png" alt="imagen logo de facebook"></a>
+				<li><a href="https://www.facebook.com/InventYourWorld/" target="_blank"><img loading="lazy" src="img/facebook.png" alt="imagen logo de facebook"></a>
 				</li>
-				<li><a href="#" target="_blank"><img src="img/email.png" alt="imagen de un correo"></a>
+				<li><a href="#" target="_blank"><img loading="lazy" src="img/email.png" alt="imagen de un correo"></a>
 				</li>
-				<li><a href="#" target="_blank"><img src="img/twitter.png" alt="imagen logo de twitter"></a>
+				<li><a href="#" target="_blank"><img loading="lazy" src="img/twitter.png" alt="imagen logo de twitter"></a>
 				</li>
 			</ul>	
 		</div>
