Se eliminan imagenes basura, se optimiza css, te termina contenido de valor y se crean imagenes adaptables en beaner

--- a/blogs/como-gane-un-premio-de-300000-pesos.html
+++ b/blogs/como-gane-un-premio-de-300000-pesos.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<nav id="navegacion">
-		<a id="logo" href="../index.html"><img loading="lazy" src="../img/logo-horizontal.png" /></a>
+		<a id="logo" href="../index.html"><img loading="lazy" src="../img/logo-horizontal.png" alt="Logotipo"/></a>
 		<div class="boton-menu">
 			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
 			<a href="#" class="close"><span class="icon-menu"></span></a>
@@ -25,7 +25,7 @@
 			<li id="item5"><a href="#"><span>...</span></a></li>
 		</ul>
 	</nav>
-	<article>
+	<article class="blog">
 		<header>
 			<img loading="lazy" src="../img/Ganadores Sorteo UABC.jpg" alt="Banner" class="beaner-articulo">
 		</header>
