--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Inventa Tu Mundo</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="fonts/style.css">
-	<link rel="shortcut icon"  href="img/ico-logo.png">
+	<link rel="SHORTCUT ICON"  href="img/ico-logo.png">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4T44TXREG"></script>
@@ -22,9 +22,11 @@
 <body>
 	<header class="beaner">
 		<h1 class="beaner-title">Inventa tu mundo</h1>
+		<p>Todo lo que te imagine se puede ser creado, entra e inventemos tu mundo.</p>
 	</header>
-	<nav id="navegacion">
-		<a id="logo" href="index.html"><img loading="lazy" src="img/logo-horizontal.png" /></a>
+
+	<nav class="navegacion">
+		<a class="logo" href="index.html"><img src="img/bitmap.png" alt="Logotipo"/></a>
 		<div class="boton-menu">
 			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
 			<a href="#" class="close"><span class="icon-menu"></span></a>
@@ -42,50 +44,55 @@
 		<h2>Productos y Servicios</h2>
 		<div class="contenido">		
 			<button class="block">
-				<a href="informatica.html">
-					<figure>
+				<a href="#">
 						<img loading="lazy" class="image-block-medium" src="img/pc.png" alt="imagen de un monitor">
-					</figure>
 					<h3>INFORMATICA</h3>
 				</a>
 			</button>
 			<button class="block">
-				<a href="electronica.html">
-					<figure>
+				<a href="#">
 						<img loading="lazy" class="image-block-medium" src="img/chip.png" alt="imagen de un chip">
-					</figure>
 					<h3>ELECTRONICA</h3>
 				</a>
 			</button>
 			<button class="block">
-				<a href="desing.html">
-					<figure>
+				<a href="#">
 						<img loading="lazy" class="image-block-medium" src="img/dibujo.png" alt="imagen de una tableta de dibujo">
-					</figure>
 					<h3>DISEÑO</h3>
 				</a>
 			</button>
 			<button class="block">
-				<a href="mecatronic.html">
-					<figure>
+				<a href="#">
 						<img loading="lazy" class="image-block-medium" src="img/robot-2.png" alt="imagen de dos brazos roboticos">
-					</figure>
 					<h3>MECATRONICA</h3>
 				</a>	
 			</button>
 		</div>	
 	</section>
 
-	<section class="propuesta-de-valor">
-
-	</section>
+	<article class="propuesta-de-valor">
+		<h2>Te presento mi propuesta</h2>
+		<h3 class="centrado">Aportando servicios para cambiar mundo con calidad y creatividad</h3>
+		<img src="img/banner-twtich.png" alt="Lienzo de creatividad">
+		<p>El verdadero rendimiento y el potencial para creser es de las personas que vienen de abajo.
+			Siendo de esas personas se tiene como meta llegar lejos de forma que se pueda cambiar el mundo.
+			Mostrando las capasidades de ser autodidactamente y mostrando la creatividad para mostrar
+			el talento del arte, tecnologia y ciencia para brindar los servicios de mejor calidad.
+			Solucionando problemas desde otro punto de vista de la gente de abajo hacia arriba, sabiendo
+			las verdaderas necesidades de la gente, entregando los productos y sientan el apoderamiento
+			de la tecnologia para mejorar su confort en su vida.
+		</p>
+		<p>Apostando todo su capasidad para capasitarse autodidactamente para prestar su servicio de mejor
+			forma para poder cambiar el mundo y eliminar sus barreras.
+		</p>
+	</article>
 
 	<section class="contenido-de-interes">
 		<h2>Contenido de interes</h2>
 		<div class="contenido">
 			<article class="block">
 				<figure><img loading="lazy" src="img/impresion3D.png" alt="imagen impresion 3D"></figure>
-				<h3>Me gane 1er premio en un sorte</h3>
+				<h3>premio #1 en un sorte</h3>
 				<p>Siempre se cree estar listo para cuando llegue la oportunidades y creeme que no lo estas,
 					aqui le va mi historia que me cambio la vida...
 				</p>
@@ -95,39 +102,38 @@
 	</section>
 
 	<footer class="container-footer">
-		<h2>Datos de contacto</h2>
-		<p>&copy; 2018. Todos los derechos reservados.</p>
+		<div>
+			<h4>INVENTA TU MUNDO</h4>
+			<p>Inventa tu mundo es proveedor de servicios de tecnologia, diseño y dispuesto asesorar 
+				a personas con grandes ideas a llevarlas a la realidad.
+			</p>
+		</div>
 		<div class="nav-footer">
 			<h4>Explorar</h4>
-			<ul class="list">
-				<li><a class="menu-link" href="index.html">Inicio</a></li>
-				<li><a class="menu-link" href="nosotros.html">Acerca de</a></li>
-				<li><a class="menu-link" href="contacto.html">Contacto</a></li>
+			<ul>
+				<li><a href="#">Blogs</a></li>
+				<li><a href="#">Servicios</a></li>
 			</ul>
 		</div>
 		<div class="nav-footer">
-			<h4>Legal</h4>
-			<ul class="list">
-				<li><a class="menu-link" href="privacidad.html">Privacidad</a></li>
-			</ul>
+			<h4>INFORMACION</h4>
+				<h4>LEGAL</h4>
+					<ul class="list">
+						<li><a class="menu-link" href="privacidad.html">Privacidad</a></li>
+					</ul>
 		</div>
-		<form action="#">
-			<h3>ENVIANOS UN CORREO</h3>
-			<input type="email" name="email" placeholder="Tu correo aqui">
-			<button name="enviar"></button>
-		</form>
-
 		<div class="nav-social-networks">
-			<h4>Seguir</h4>
+			<h4>SIGUENOS EN REDES</h4>
 			<ul>
-				<li><a href="https://www.facebook.com/InventYourWorld/" target="_blank"><img loading="lazy" src="img/facebook.png" alt="imagen logo de facebook"></a>
+				<li><a href="https://www.facebook.com/InventYourWorld/" target="_blank"><img loading="lazy" src="img/facebook.png" alt="Facebook"></a>
 				</li>
-				<li><a href="#" target="_blank"><img loading="lazy" src="img/email.png" alt="imagen de un correo"></a>
+				<li><a href="/www.linkedin.com/company/iyw" target="_blank"><img loading="lazy" src="img/email.png" alt="linkedin"></a>
 				</li>
 				<li><a href="#" target="_blank"><img loading="lazy" src="img/twitter.png" alt="imagen logo de twitter"></a>
 				</li>
 			</ul>	
 		</div>
+		<p>&copy; 2020. Todos los derechos reservados.</p>
 	</footer>
 </body>
 </html>
