Se corrigen errores de ortografia

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<p>Todo lo que te imagine se puede ser creado, entra e inventemos tu mundo.</p>
 	</header>
 
-	<nav class="navegacion">
-		<a class="logo" href="index.html"><img src="img/bitmap.png" alt="Logotipo"/></a>
+	<nav id="navegacion">
+		<a id="logo" href="index.html"><img src="img/bitmap.png" alt="Logotipo"/></a>
 		<div class="boton-menu">
 			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
 			<a href="#" class="close"><span class="icon-menu"></span></a>
@@ -72,18 +72,18 @@
 
 	<article class="propuesta-de-valor">
 		<h2>Te presento mi propuesta</h2>
-		<h3 class="centrado">Aportando servicios para cambiar mundo con calidad y creatividad</h3>
+		<h3 class="centrado">Aportando servicios para cambiar el mundo con calidad y creatividad</h3>
 		<img src="img/banner-twtich.png" alt="Lienzo de creatividad">
-		<p>El verdadero rendimiento y el potencial para creser es de las personas que vienen de abajo.
-			Siendo de esas personas se tiene como meta llegar lejos de forma que se pueda cambiar el mundo.
-			Mostrando las capasidades de ser autodidactamente y mostrando la creatividad para mostrar
-			el talento del arte, tecnologia y ciencia para brindar los servicios de mejor calidad.
-			Solucionando problemas desde otro punto de vista de la gente de abajo hacia arriba, sabiendo
-			las verdaderas necesidades de la gente, entregando los productos y sientan el apoderamiento
-			de la tecnologia para mejorar su confort en su vida.
-		</p>
-		<p>Apostando todo su capasidad para capasitarse autodidactamente para prestar su servicio de mejor
-			forma para poder cambiar el mundo y eliminar sus barreras.
+		<p>El verdadero rendimiento y el potencial para crecer es de las personas que vienen de abajo.
+            Siendo de esas personas se tiene como meta llegar lejos de forma que se pueda cambiar el mundo.
+            Mostrando las capacidades de ser autodidactamente y mostrando la creatividad para mostrar
+            el talento del arte, tecnología y ciencia para brindar los servicios de mejor calidad.
+            Solucionando problemas desde otro punto de vista de la gente de abajo hacia arriba, sabiendo
+            las verdaderas necesidades de la gente, entregando los productos y sientan el apoderamiento
+            de la tecnología para mejorar su confort en su vida.
+        </p>
+        <p>Apostando todo su capacidad para capacitarse autodidactamente para prestar su servicio de mejor
+            forma para poder cambiar el mundo y eliminar sus barreras.
 		</p>
 	</article>
 
@@ -104,7 +104,7 @@
 	<footer class="container-footer">
 		<div>
 			<h4>INVENTA TU MUNDO</h4>
-			<p>Inventa tu mundo es proveedor de servicios de tecnologia, diseño y dispuesto asesorar 
+			<p>Inventa tu mundo es proveedor de servicios de tecnología, diseño y dispuesto asesorar 
 				a personas con grandes ideas a llevarlas a la realidad.
 			</p>
 		</div>
