Se agrega imagen nueva del articulo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</header>
 
 	<nav id="navegacion">
-		<a id="logo" href="index.html"><img src="img/bitmap.png" alt="Logotipo"/></a>
+		<a id="logo" href="index.html"><img src="img/logo-horizontal.png" alt="Logotipo"/></a>
 		<div class="boton-menu">
 			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
 			<a href="#" class="close"><span class="icon-menu"></span></a>
@@ -91,7 +91,7 @@
 		<h2>Contenido de interes</h2>
 		<div class="contenido">
 			<article class="block">
-				<figure><img loading="lazy" src="img/impresion3D.png" alt="imagen impresion 3D"></figure>
+				<img loading="lazy" src="img/boleto.png" alt="boleto ganador">
 				<h3>premio #1 en un sorte</h3>
 				<p>Siempre se cree estar listo para cuando llegue la oportunidades y creeme que no lo estas,
 					aqui le va mi historia que me cambio la vida...
